[gd_scene load_steps=12 format=3 uid="uid://drwk50tl8svlb"]

[ext_resource type="Script" uid="uid://36jsf7nrevhw" path="res://Scenes/Menu/title_screen.gd" id="1_klylv"]
[ext_resource type="Texture2D" uid="uid://cj8c6q7vsagbq" path="res://Scenes/Menu/additionalBG/Game Menu1.png" id="2_l7j0b"]
[ext_resource type="Texture2D" uid="uid://c1vkq5x228bl3" path="res://Scenes/Menu/Buttons/play.png" id="3_1muiv"]
[ext_resource type="Texture2D" uid="uid://btt6oqcr26xur" path="res://Scenes/Menu/Buttons/play_pressed.png" id="3_w7g30"]
[ext_resource type="Texture2D" uid="uid://bn768svy8qb7f" path="res://Scenes/Menu/Buttons/quit.png" id="4_e817g"]
[ext_resource type="Texture2D" uid="uid://b3yjwin26yqou" path="res://Scenes/Menu/Buttons/play_highlight.png" id="4_l7j0b"]
[ext_resource type="Texture2D" uid="uid://d4mqh0qh1xw86" path="res://Scenes/Menu/Buttons/credits_pressed.png" id="5_1muiv"]
[ext_resource type="Texture2D" uid="uid://dg22txshbim16" path="res://Scenes/Menu/Buttons/credits.png" id="5_t2cy8"]
[ext_resource type="Texture2D" uid="uid://b52s5cux3gf2k" path="res://Scenes/Menu/Buttons/quit_pressed.png" id="6_b2y4x"]
[ext_resource type="Texture2D" uid="uid://cioe5yp524fot" path="res://Scenes/Menu/Buttons/credits_highlight.png" id="6_e817g"]
[ext_resource type="Texture2D" uid="uid://dbpg7ut2hmynl" path="res://Scenes/Menu/Buttons/quit_highlight.png" id="7_0gdvu"]

[node name="title_screen" type="Node2D"]
script = ExtResource("1_klylv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_l7j0b")

[node name="button_manager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Start" type="TextureButton" parent="button_manager"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 175.0
offset_top = 320.0
offset_right = 335.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture_normal = ExtResource("3_1muiv")
texture_pressed = ExtResource("3_w7g30")
texture_hover = ExtResource("4_l7j0b")

[node name="Quit" type="TextureButton" parent="button_manager"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 175.0
offset_top = 450.0
offset_right = 335.0
offset_bottom = 470.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture_normal = ExtResource("4_e817g")
texture_pressed = ExtResource("6_b2y4x")
texture_hover = ExtResource("7_0gdvu")

[node name="Credit" type="TextureButton" parent="button_manager"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 175.0
offset_top = 580.0
offset_right = 335.0
offset_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture_normal = ExtResource("5_t2cy8")
texture_pressed = ExtResource("5_1muiv")
texture_hover = ExtResource("6_e817g")

[connection signal="pressed" from="button_manager/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="button_manager/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="button_manager/Credit" to="." method="_on_credit_pressed"]
